# mydolphin

./: .gitignore  README.md
include/mydolphin/: mydolphin.hpp
tests/: CMakeLists.txt  mydolphin.vcxproj  tests.cpp
